course section added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
                 <div>Contact Us</div>
             </div>
         </div>
+        <div id="course">
+            <div id="course-1">
+                <h3>Courses</h3>
+                <h4>Self Makeup</h4>
+                <h4>Professionl</h4>
+                <h4>Hair Styling </h4>
+            </div>
+            <div id="course-2">
+                <h2>Course Content</h2>
+                <h3>Product knowledege</h3>
+                <h3>Preping skin</h3>
+                <h3>Foundation matching and applictions</h3>
+                <h3>concelling</h3>
+            </div>
+        </div>
     </div>
 </body>
 </html>
