about-us section done

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beauty-salone</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
+    rel="stylesheet"
+/>
 </head>
+
 <body>
     <div id="main">
         <div id="nav">
@@ -34,6 +40,23 @@
                 <h3>concelling</h3>
             </div>
         </div>
+        <div id="work-gallery">
+            <h3>Work Gallery</h3>
+        </div>
+        <div id="about-us">
+            <h3>About beautian :-</h3>
+            <div id="about-beautian">
+                <div id="beautian-image">
+                    <img src="image/beautian.jpg" alt="beautian-image">
+                </div>
+                <div id="beautian-detail">
+                    "She has more than five years of job experience in this industry. She has done several wedding makeup
+                    looks all throughout India. Her work was excellent and deserving of praise."
+                </div>
+            </div>
+            
+        </div>
     </div>
 </body>
+
 </html>
