--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
                 <div>Contact Us</div>
             </div>
         </div>
+        <div id="cover-video">
+            <video width="600" height="300" autoplay muted>
+                <source src="image/cover-v.mp4" type="video/mp4">
+              </video> 
+        </div>
+        <!-- <div class="h_iframe" height="400"  width="500">
+            <iframe src="image/cover-v.mp4" frameborder="0" allowfullscreen></iframe>
+        </div> -->
         <div id="course">
             <div id="course-1">
                 <h3>Courses</h3>
@@ -47,7 +55,7 @@
             <h3>About beautian :-</h3>
             <div id="about-beautian">
                 <div id="beautian-image">
-                    <img src="image/beautian.jpg" alt="beautian-image">
+                    <img src="image/beautian-1.jpg" alt="beautian-image">
                 </div>
                 <div id="beautian-detail">
                     "She has more than five years of job experience in this industry. She has done several wedding makeup
