--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div id="cover-video">
-            <video width="600" height="300" autoplay muted>
+            <video  autoplay muted>
                 <source src="image/cover-v.mp4" type="video/mp4">
               </video> 
         </div>
